# api_gmail

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_DEV.md  README_DEV_EN.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: embed.js
frontend/src/: App.tsx  api.ts
frontend/src/components/: ConnectPopup.tsx  MessageList.tsx  QuotePreview.tsx  Sidebar.tsx  ThreadView.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: utils.ts
src/: config.rs  error.rs  main.rs
src/handlers/: api.rs  gmail.rs  health.rs  mod.rs  outlook.rs  postmark.rs  provider.rs
src/middleware/: auth.rs
src/services/: bubble.rs  mod.rs  n8n.rs
