[package]
name = "gmail-api-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
mail-parser = "0.9"
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
urlencoding = "2.1"
async-trait = "0.1"
html-escape = "0.2"
lru = "0.12"
uuid = { version = "1.7", features = ["v4"] }
regex = "1.10"



